--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "swolly",
+  "private": true,
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
