--- a/package.json
+++ b/package.json
@@ -5,12 +5,28 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --recursive",
+    "doc": "esdoc"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "chai": "^4.3.0",
     "esdoc": "^1.1.0",
-    "esdoc-standard-plugin": "^1.0.0"
+    "esdoc-ecmascript-proposal-plugin": "^1.0.0",
+    "esdoc-node": "^1.0.5",
+    "esdoc-node-require": "^1.0.4",
+    "esdoc-standard-plugin": "^1.0.0",
+    "mocha": "^8.3.0",
+    "sinon": "^9.2.4"
+  },
+  "dependencies": {
+    "bcrypt": "^5.0.1",
+    "chai-as-promised": "^7.1.1",
+    "file-type": "^16.2.0",
+    "mariadb": "^2.5.3",
+    "nanoid": "^3.1.20",
+    "sequelize": "^6.5.0",
+    "uuid": "^8.3.2"
   }
 }
